--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,7 +15,7 @@ GlobalDefaultServerGameMode=None
 r.Mobile.ShadingPath=0
 r.Mobile.AllowDeferredShadingOpenGL=False
 r.Mobile.SupportGPUScene=False
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=0
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -216,6 +216,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/CowAmongus")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/CowAmongus")
+bUseFixedFrameRate=True
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
