--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=72B8BFD143AD7CA8A21DF9BB75093EFA
-ProjectName=Third Person BP Game Template
+ProjectName=CowAmongus
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +8,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
